--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "axios": "^0.27.2",
+    "cheerio": "^1.0.0-rc.11",
     "firebase": "^9.8.2",
     "next": "latest",
     "react": "^17.0.2",
