--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@toast-ui/react-calendar": "^2.1.0",
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.11",
     "dotenv": "^16.0.1",
