--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.11",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
     "firebase-admin": "^10.2.0",
     "next": "latest",
